--- a/consultancy-website-template/html/about.html
+++ b/consultancy-website-template/html/about.html
@@ -198,10 +198,10 @@
         <div class="row g-5">
             <div class="col-lg-4">
                 <div class="team-item position-relative overflow-hidden">
-                    <img class="img-fluid w-100" src="../img/team-1.jpg" alt="">
+                    <img class="img-fluid w-100" src="../img/Joe.png" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
+                        <h3 class="text-white">Joelson T Mvundura</h3>
+                        <p class="text-white text-uppercase mb-0">IT & Development Manager</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                     <img class="img-fluid w-100" src="../img/Bizamare Beloved (4).JPG" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
                         <h3 class="text-white">Beloved Bizamare</h3>
-                        <p class="text-white text-uppercase mb-0">Chief Executive officer (CEO) & Founder.</p>
+                        <p class="text-white text-uppercase mb-0">Digital transformation & Digital Marketing Practioner.</p>
                     </div>
                 </div>
             </div>
@@ -218,8 +218,8 @@
                 <div class="team-item position-relative overflow-hidden">
                     <img class="img-fluid w-100" src="../img/team-3.jpg" alt="">
                     <div class="team-text w-100 position-absolute top-50 text-center bg-primary p-4">
-                        <h3 class="text-white">Full Name</h3>
-                        <p class="text-white text-uppercase mb-0">Designation</p>
+                        <h3 class="text-white">Blessed Mangaiso</h3>
+                        <p class="text-white text-uppercase mb-0">Animator & 3D Product Design Manager</p>
                     </div>
                 </div>
             </div>
